--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               data-title="Agua de Naranja"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art10.png" alt="Agua de Naranja" loading="lazy" />
+              <img src="public/img/art10.png" alt="Agua de Naranja" loading="lazy" />
               <h3>Naranja</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -343,7 +343,7 @@
               data-title="Agua de Limon"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art11.png" alt="Agua de Limon" loading="lazy" />
+              <img src="public/img/art11.png" alt="Agua de Limon" loading="lazy" />
               <h3>Limon</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -355,7 +355,7 @@
               data-price="$13"
             >
               <img
-                src="img/art12.png"
+                src="public/img/art12.png"
                 alt="Paleta de Limón Natural"
                 loading="lazy"
               />
@@ -369,7 +369,7 @@
               data-title="Paleta de Coco"
               data-price="$13"
             >
-              <img src="img/art13.png" alt="Paleta de Coco" loading="lazy" />
+              <img src="public/img/art13.png" alt="Paleta de Coco" loading="lazy" />
               <h3>Coco</h3>
               <span class="product-price">$13</span>
             </article>
@@ -380,7 +380,7 @@
               data-title="Paleta de Fresa"
               data-price="$13"
             >
-              <img src="img/art14.png" alt="Paleta de Fresa" loading="lazy" />
+              <img src="public/img/art14.png" alt="Paleta de Fresa" loading="lazy" />
               <h3>Fresa</h3>
               <span class="product-price">$13</span>
             </article>
@@ -391,7 +391,7 @@
               data-title="Paleta de Chamoy"
               data-price="$13"
             >
-              <img src="img/art15.png" alt="Paleta de Chamoy" loading="lazy" />
+              <img src="public/img/art15.png" alt="Paleta de Chamoy" loading="lazy" />
               <h3>Chamoy</h3>
               <span class="product-price">$13</span>
             </article>
@@ -402,7 +402,7 @@
               data-title="Paleta de Arroz"
               data-price="$13"
             >
-              <img src="img/art16.png" alt="Paleta de Arroz" loading="lazy" />
+              <img src="public/img/art16.png" alt="Paleta de Arroz" loading="lazy" />
               <h3>Arroz</h3>
               <span class="product-price">$13</span>
             </article>
@@ -413,7 +413,7 @@
               data-title="Paleta de Guayaba"
               data-price="$13"
             >
-              <img src="img/art17.png" alt="Paleta de Guayaba" loading="lazy" />
+              <img src="public/img/art17.png" alt="Paleta de Guayaba" loading="lazy" />
               <h3>Guayaba</h3>
               <span class="product-price">$13</span>
             </article>
@@ -424,7 +424,7 @@
               data-title="Paleta de Piña"
               data-price="$13"
             >
-              <img src="img/art18.png" alt="Paleta de Piña" loading="lazy" />
+              <img src="public/img/art18.png" alt="Paleta de Piña" loading="lazy" />
               <h3>Piña</h3>
               <span class="product-price">$13</span>
             </article>
@@ -435,7 +435,7 @@
               data-title="Paleta de Uva"
               data-price="$13"
             >
-              <img src="img/art19.png" alt="Paleta de Uva" loading="lazy" />
+              <img src="public/img/art19.png" alt="Paleta de Uva" loading="lazy" />
               <h3>Uva</h3>
               <span class="product-price">$13</span>
             </article>
@@ -448,7 +448,7 @@
               data-price="$25"
             >
               <img
-                src="img/art20.png"
+                src="public/img/art20.png"
                 alt="Paleta de Vainilla con Pasas"
                 loading="lazy"
               />
@@ -463,7 +463,7 @@
               data-price="$25"
             >
               <img
-                src="img/art21.png"
+                src="public/img/art21.png"
                 alt="Paleta de Vainilla con Jalea"
                 loading="lazy"
               />
@@ -477,7 +477,7 @@
               data-title="Paleta de Coco"
               data-price="$25"
             >
-              <img src="img/art22.png" alt="Paleta de Coco" loading="lazy" />
+              <img src="public/img/art22.png" alt="Paleta de Coco" loading="lazy" />
               <h3>Coco</h3>
               <span class="product-price">$25</span>
             </article>
@@ -488,7 +488,7 @@
               data-title="Paleta de Fresa"
               data-price="$25"
             >
-              <img src="img/art23.png" alt="Paleta de Fresa" loading="lazy" />
+              <img src="public/img/art23.png" alt="Paleta de Fresa" loading="lazy" />
               <h3>Fresa</h3>
               <span class="product-price">$25</span>
             </article>
@@ -499,7 +499,7 @@
               data-title="Paleta de Nuez"
               data-price="$25"
             >
-              <img src="img/art24.png" alt="Paleta de Nuez" loading="lazy" />
+              <img src="public/img/art24.png" alt="Paleta de Nuez" loading="lazy" />
               <h3>Nuez</h3>
               <span class="product-price">$25</span>
             </article>
@@ -510,7 +510,7 @@
               data-title="Paleta de Galleta"
               data-price="$25"
             >
-              <img src="img/art25.png" alt="Paleta de Galleta" loading="lazy" />
+              <img src="public/img/art25.png" alt="Paleta de Galleta" loading="lazy" />
               <h3>Galleta</h3>
               <span class="product-price">$25</span>
             </article>
@@ -521,7 +521,7 @@
               data-title="Paleta de Gancito"
               data-price="$25"
             >
-              <img src="img/art26.png" alt="Paleta de Gancito" loading="lazy" />
+              <img src="public/img/art26.png" alt="Paleta de Gancito" loading="lazy" />
               <h3>Gancito</h3>
               <span class="product-price">$25</span>
             </article>
@@ -533,7 +533,7 @@
               data-price="$25"
             >
               <img
-                src="img/art27.png"
+                src="public/img/art27.png"
                 alt="Paleta de Fresas con Crema"
                 loading="lazy"
               />
@@ -547,7 +547,7 @@
               data-title="Nieve de Galleta"
               data-price="$15 / cups"
             >
-              <img src="img/art28.png" alt="Nieve de Galleta" loading="lazy" />
+              <img src="public/img/art28.png" alt="Nieve de Galleta" loading="lazy" />
               <h3>Galleta</h3>
               <span class="product-price">$15 / cups</span>
             </article>
@@ -558,7 +558,7 @@
               data-title="Nieve de Vainilla"
               data-price="$15 / cups"
             >
-              <img src="img/art29.png" alt="Nieve de Vainilla" loading="lazy" />
+              <img src="public/img/art29.png" alt="Nieve de Vainilla" loading="lazy" />
               <h3>Vainilla</h3>
               <span class="product-price">$15 / cups</span>
             </article>
@@ -570,7 +570,7 @@
               data-price="$15 / cups"
             >
               <img
-                src="img/art30.png"
+                src="public/img/art30.png"
                 alt="Nieve de Chocolate"
                 loading="lazy"
               />
@@ -584,7 +584,7 @@
               data-title="Nieve de Fresa"
               data-price="$15 / cups"
             >
-              <img src="img/art31.png" alt="Nieve de Fresa" loading="lazy" />
+              <img src="public/img/art31.png" alt="Nieve de Fresa" loading="lazy" />
               <h3>Fresa</h3>
               <span class="product-price">$15 / cups</span>
             </article>
@@ -595,7 +595,7 @@
               data-title="Nieve de Nuez"
               data-price="$15 / cups"
             >
-              <img src="img/art32.png" alt="Nieve de Nuez" loading="lazy" />
+              <img src="public/img/art32.png" alt="Nieve de Nuez" loading="lazy" />
               <h3>Nuez</h3>
               <span class="product-price">$15 / cups</span>
             </article>
@@ -606,7 +606,7 @@
               data-title="Nieve de Café"
               data-price="$15 / cups"
             >
-              <img src="img/art33.png" alt="Nieve de Café" loading="lazy" />
+              <img src="public/img/art33.png" alt="Nieve de Café" loading="lazy" />
               <h3>Café</h3>
               <span class="product-price">$15 / cups</span>
             </article>
@@ -617,7 +617,7 @@
               data-title="Nieve de Mermelada"
               data-price="$15 / cups"
             >
-              <img src="img/art34.png" alt="Nieve de Cajeta" loading="lazy" />
+              <img src="public/img/art34.png" alt="Nieve de Cajeta" loading="lazy" />
               <h3>Cajeta</h3>
               <span class="product-price">$15 / cups</span>
             </article>
@@ -826,7 +826,7 @@
       </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="src/main.js"></script>
   </body>
   </div>
     </footer>
@@ -835,11 +835,11 @@
       ...
     </div>
 
-    <audio id="sparkle-sound" src="public/sounds/" preload="auto"></audio>
+    <audio id="sparkle-sound" src="public/sounds/sparkle.mp3" preload="auto"></audio>
 
     <script src="src/main.js"></script>
   </body>
 </html>
   <body class="loading">
-<img id="magic-cone-cursor" src="img/cono.png" alt="Cursor de cono de nieve" />
+<img id="magic-cone-cursor" src="public/img/cono.png" alt="Cursor de cono de nieve" />
 </html>
