--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               data-price="Ch $25 | M $30 | G $40"
             >
               <img
-                src="img/art1.png"
+                src="public/img/art1.png"
                 alt="Agua de Limón con Chía"
                 loading="lazy"
               />
@@ -247,7 +247,7 @@
               data-title="Agua de Frutas"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art2.png" alt="Agua de Frutas" loading="lazy" />
+              <img src="public/img/art2.png" alt="Agua de Frutas" loading="lazy" />
               <h3>Frutas</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -258,7 +258,7 @@
               data-price="Ch $25 | M $30 | G $40"
             >
               <img
-                src="img/art3.png"
+                src="public/img/art3.png"
                 alt="Agua de Fresa Natural"
                 loading="lazy"
               />
@@ -271,7 +271,7 @@
               data-title="Agua de Granada"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art4.png" alt="Agua de Granada" loading="lazy" />
+              <img src="public/img/art4.png" alt="Agua de Granada" loading="lazy" />
               <h3>Maracuyá</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -281,7 +281,7 @@
               data-title="Agua de Kalua"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art5.png" alt="Agua de Kalua" loading="lazy" />
+              <img src="public/img/art5.png" alt="Agua de Kalua" loading="lazy" />
               <h3>Kalua</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -291,7 +291,7 @@
               data-title="Agua de Lima"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art6.png" alt="Agua de Lima" loading="lazy" />
+              <img src="public/img/art6.png" alt="Agua de Lima" loading="lazy" />
               <h3>Lima</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -301,7 +301,7 @@
               data-title="Agua de Piña"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art7.png" alt="Agua de Piña" loading="lazy" />
+              <img src="public/img/art7.png" alt="Agua de Piña" loading="lazy" />
               <h3>Piña</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -311,7 +311,7 @@
               data-title="Agua de Arroz"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art8.png" alt="Agua de Arroz" loading="lazy" />
+              <img src="public/img/art8.png" alt="Agua de Arroz" loading="lazy" />
               <h3>Arroz</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
@@ -321,7 +321,7 @@
               data-title="Agua de Coco"
               data-price="Ch $25 | M $30 | G $40"
             >
-              <img src="img/art9.png" alt="Agua de Coco" loading="lazy" />
+              <img src="public/img/art9.png" alt="Agua de Coco" loading="lazy" />
               <h3>Coco</h3>
               <span class="product-price">Ch $25 | M $30 | G $40</span>
             </article>
